--- a/ServiceComplex/Pages/BaseData/Salon.cshtml
+++ b/ServiceComplex/Pages/BaseData/Salon.cshtml
@@ -112,6 +112,14 @@
                                                 </svg>
                                             </a>
 
+                                            <a class="" onclick="َAddPrd('@item.SlnId')" title="انتساب خدمات">
+                                                <svg style="color:#2196f3" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info">
+                                                    <circle cx="12" cy="12" r="10"></circle>
+                                                    <line x1="12" y1="16" x2="12" y2="12"></line>
+                                                    <line x1="12" y1="8" x2="12.01" y2="8"></line>
+                                                </svg>
+                                            </a>
+
                                             <a class="" onclick="Remove('@item.SlnId')" title="حذف">
                                                 <svg style="color:#e7515a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2">
                                                     <polyline points="3 6 5 6 21 6"></polyline>
@@ -156,7 +164,7 @@
                     </svg>
                 </button>
             </div>
-            <form method="post" class="needs-validation" asp-page="/Salon/Salon" asp-page-handler="Create" name="submitForm" id="">
+            <form method="post" class="needs-validation" asp-page="/BaseData/Salon" asp-page-handler="Create" name="submitForm" id="">
                 <div class="modal-body">
 
                     <div class="widget-content">
@@ -207,7 +215,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <input type="submit" class="btn" data-dismiss="modal" id="saveChanges" value="ذخیره تغییرات" />
+                    <input type="submit" class="btn" data-dismiss="modal" id="saveChanges" value="ذخیره " />
                     <button class="btn" data-dismiss="modal"><i class="flaticon-cancel-12"></i> بستن</button>
                 </div>
             </form>
@@ -229,7 +237,7 @@
                     </svg>
                 </button>
             </div>
-            <form method="post" class="needs-validation" asp-page="/Salon/Salon" asp-page-handler="Edit" name="submitForm" id="EditForm">
+            <form method="post" class="needs-validation" asp-page="/BaseData/Salon" asp-page-handler="Edit" name="submitForm" id="EditForm">
                 <div class="modal-body">
 
                     <div class="widget-content">
@@ -358,7 +366,7 @@
                                     result.message,
                                     'success'
                                 ).then(function () {
-                                    window.location = "/Salon/Salon";
+                                    window.location = "/BaseData/Salon";
                                 });
                             } else {
                                 swal(
