--- a/ServiceComplex/Pages/Products/Create.cshtml
+++ b/ServiceComplex/Pages/Products/Create.cshtml
@@ -15,12 +15,12 @@
 <link rel="stylesheet" type="text/css" href="~/plugins/editors/quill/quill.snow.css">
 
 
-<style>
+@*<style>
     .valid {
         border: none;
         outline: green solid 1px !important;
     }
-</style>
+</style>*@
 <div id="content" class="main-content">
 <div class="layout-px-spacing">
 
@@ -33,7 +33,7 @@
         <a class="nav-link active" id="justify-home-tab" data-toggle="tab" href="#justify-home" role="tab" aria-controls="justify-home" aria-selected="true">اطلاعات اصلی</a>
     </li>
     <li class="nav-item  ">
-        <a class="nav-link disabled" id="justify-profile-tab" data-toggle="tab" href="#justify-profile" role="tab" aria-controls="justify-profile" aria-selected="false">سایر اطلاعات </a>
+        <a class="nav-link " id="justify-profile-tab" data-toggle="tab" href="#justify-profile" role="tab" aria-controls="justify-profile" aria-selected="false">سایر اطلاعات </a>
     </li>
   @*  <li class="nav-item">
         <a class="nav-link disabled" id="justify-contact-tab" data-toggle="tab" href="#justify-contact" role="tab" aria-controls="justify-contact" aria-selected="false">ویژگی ها </a>
@@ -61,19 +61,19 @@
                                 <select asp-for="Command.PrdLvlUid3" id="group" class="form-control" asp-Items="@(new SelectList(Model.Category, "PrdLvlUId", "PrdLvlName"))">
                                     <option value="" selected>انتخاب کنید...</option>
                                 </select>
-                                <span asp-validation-for="Command.PrdLvlUid3" class="error"></span>
-
+@*                                <span asp-validation-for="Command.PrdLvlUid3" class="error"></span>
+*@
                             </div>
                             <div class="form-group col-md-4">
                                 <label for=""> نام <span class="error">*</span></label>
                                 <input asp-for="Command.PrdName" type="text" class="form-control" id="" required="" placeholder="نام">
-                                <span asp-validation-for="Command.PrdName" class="error"></span>
-                            </div>
+@*                                <span asp-validation-for="Command.PrdName" class="error"></span>
+*@                            </div>
                             <div class="form-group col-md-4">
                                 <label title="نمایش در فروشگاه، اپلیکشن موبایل و چاپ" for="">نام نمایشی کالا <span class="error">*</span></label>
                                 <input asp-for="Command.PrdNameInPrint" type="text" class="form-control" id="" placeholder="نام نمایشی">
-                                <span asp-validation-for="Command.PrdNameInPrint" class="error"></span>
-                            </div>
+@*                                <span asp-validation-for="Command.PrdNameInPrint" class="error"></span>
+*@                            </div>
                                                    
 
                           
@@ -89,8 +89,8 @@
                                     <option value="3">مجازی</option>
                                     <option value="1">غرفه</option>
                                 </select>
-                                <span asp-validation-for="Command.Type" class="error"></span>
-                            </div>
+@*                                <span asp-validation-for="Command.Type" class="error"></span>
+*@                            </div>
                              <div class="form-group col-md-4" id="isService" style="display:none">
                                 <div class="n-chk mt-40">
                                     <label class="new-control new-checkbox checkbox-primary Current-color">
@@ -99,13 +99,10 @@
                                     </label>
                                 </div>
                             </div>
-                         
-                        </div>
-                         <div class="form-row mb-8">
                              <div class="form-group col-md-4" id="prdunit" style="display:none"> 
-                                <label for=""> واحد شمارش </label>
+                                <label for=""> واحد شمارش <span class="error">*</span></label>
                                 
-                                <select asp-for="Command.FkProductUnit"  type="text" class="form-control" id="" asp-items="@(new SelectList(Model.Unit,"Id","Name"))">
+                                <select asp-for="Command.FkProductUnit"  type="text" class="form-control" id="ProductUnit" asp-items="@(new SelectList(Model.Unit,"Id","Name"))">
                                     <option value="">انتخاب...</option>
                                      
                                 </select>
@@ -118,9 +115,10 @@
                                         <span class="new-control-indicator"></span>کالا دو واحدی است؟
                                     </label>
                                 </div>
-                            </div>
-                           
-                         </div>
+                             </div>
+                         
+                        </div>
+                        
 
                         <div class="form-row mb-8">
                                     @if (Model.GenerateCode)
@@ -136,20 +134,20 @@
                                 <div class="form-group col-md-4">
                                     <label for=""> کد کالا <span class="error">*</span></label>
                                     <input onchange="CheckControl(this.value)" asp-for="Command.PrdCode" type="text" class="form-control" id="" placeholder=" کد کالا">
-                                    <span asp-validation-for="Command.PrdCode" id="validateCode" class="error"></span>
-                                </div>
+@*                                    <span asp-validation-for="Command.PrdCode" id="validateCode" class="error"></span>
+*@                                </div>
                             }
                             <div class="form-group col-md-4">
                                 <label for=""> بار کد</label>
                                 <input asp-for="Command.PrdBarcode" type="text" class="form-control" id="" placeholder=" بارکد">
-                                <span asp-validation-for="Command.PrdBarcode" class="error"></span>
-                            </div>
+@*                                <span asp-validation-for="Command.PrdBarcode" class="error"></span>
+*@                            </div>
 
                             <div class="form-group col-md-4">
                                 <label for=""> ایران کد</label>
                                 <input asp-for="Command.PrdIranCode" type="text" class="form-control" id="" placeholder="ایران کد">
-                                <span asp-validation-for="Command.PrdIranCode" class="error"></span>
-                            </div>
+@*                                <span asp-validation-for="Command.PrdIranCode" class="error"></span>
+*@                            </div>
                            
                         </div>
 
@@ -175,8 +173,8 @@
                             <span class="text-danger"></span>
                             <p class="help-block"> مشخصۀ تصویر: width:185px و Height:1200px</p>
                         </div>
-                        <span asp-validation-for="Command.Images" class="error"></span>
-                    </div>
+@*                        <span asp-validation-for="Command.Images" class="error"></span>
+*@                    </div>
 
                 </div>
 
@@ -239,14 +237,15 @@
                                 <span asp-validation-for="Command.PrdMaxQuantityOnHand" class="error"></span>
                             </div>
                            
-                        </div>
-                         <div class="form-row mb-4">
-
-                            <div class="form-group col-md-3">
+                                <div class="form-group col-md-3">
                                 <label for=""> وزن</label>
                                 <input asp-for="Command.Weight" type="text" class="form-control" id="" placeholder=" وزن">
                                 <span asp-validation-for="Command.Weight" class="error"></span>
                             </div>
+                        </div>
+                         <div class="form-row mb-4">
+
+                        
 
                             <div class="form-group col-md-3">
                                 <label for="">حجم </label>
@@ -312,8 +311,8 @@
                                 <select asp-for="Command.TaxUid" asp-items="@(new SelectList(Model.Tax, "Id", "Name"))" class="form-control">
                                     <option value="" selected>انتخاب کنید...</option>
                                 </select>
-                                <span asp-validation-for="Command.TaxUid" class="error"></span>
-                            </div>
+@*                                <span asp-validation-for="Command.TaxUid" class="error"></span>
+*@                            </div>
 
                             <div class="form-group col-md-3 mt-30">
                                 <label class="Current-color " for="">نوع تخفیف:</label>
@@ -326,8 +325,8 @@
                                     <label class="Current-color form-check-label mr-0" for="inlineRadio2">مبلغ</label>
                                 </div>
 
-                                <span asp-validation-for="Command.PrdDiscountType" class="error"></span>
-                            </div>
+@*                                <span asp-validation-for="Command.PrdDiscountType" class="error"></span>
+*@                            </div>
 
 
                             <div class="form-group col-md-3">
@@ -335,8 +334,8 @@
                                 <input asp-for="Command.PrdDiscount" class="form-control" type="number" disabled="">
                                 <span id="dicountDis" class="help-block text-warning"></span>
                                 <br/>
-                                <span asp-validation-for="Command.PrdDiscount" class="error"></span>
-                            </div>
+@*                                <span asp-validation-for="Command.PrdDiscount" class="error"></span>
+*@                            </div>
 
                           
                         </div>
@@ -346,7 +345,7 @@
                         <input type="hidden" asp-for="Command.FkProductUnit2"/>
                         <input type="hidden" asp-for="Command.PrdCoefficient"/>
                         <input type="hidden" asp-for="Command.PrdIsUnit1Bigger"/>
-
+@*
                         <div class="form-row col-md-12 mb-4">
 
                             <div id="basic" class="col-lg-12 col-md-12 row layout-spacing layout-top-spacing">
@@ -355,77 +354,16 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
 
             </div>
         </div>
-            <button id="final-submit" type="submit" class="btn btn-success btn-sm btn-rounded pull-left">تایید نهایی</button>
-@*        <button style="margin-right:90%" id="second-form" type="submit" class="btn btn-info btn-sm btn-rounded pull-left">تایید فرم</button>
-*@    </div>
+   </div>
+                                <button id="final-submit" type="submit" class="btn btn-success btn-sm btn-rounded pull-left">تایید نهایی</button>
+
 </div>
-@*<div class="tab-pane fade" id="justify-contact" role="tabpanel" aria-labelledby="justify-contact-tab">
-    <div class="row layout-top-spacing" id="cancel-row">
-        <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
-            <div class=" br-6">
-                <form method="get" id="submitProperty" name="submitProperty">
-                    <div class="row">
-                        <div class=" col-lg-12 col-sm-12">
-                            <div class="form-row mb-4">
-                                <div class="form-group col-md-4">
-                                    <label for=""> نام ویژگی</label>
-                                    <select asp-for="Property.Id" id="propertyName" asp-items="@(new SelectList(Model.Properties, "Id", "Name"))" class="form-control" id="">
-                                        <option value="">انتخاب...</option>
-                                    </select>
-                                    <span asp-validation-for="Property.Id" class="error"></span>
-                                </div>
-
-                                <div class="form-group col-md-4">
-                                    <label for=""> مقدار ویژگی</label>
-                                    <input asp-for="Property.Value" id="propertyValue" type="text" class="form-control" id="" placeholder=" مقدار ویژگی">
-                                    <span asp-validation-for="Property.Value" class="error"></span>
-                                </div>
-
-                                <div class="form-group col-md-4">
-                                    <button type="submit" id="submit-property" class="btn btn-info btn-sm btn-rounded mt-35">افزودن به لیست</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-
-                <div class="row">
-                    <div class="col-md-6 text-center">
-                        <div class="panel panel-default">
-
-                            <div class="panel-body">
-                                <div class="row">
-                                    <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
-                                        <table id="property-dataTable" class="Current-color table table-striped table-bordered">
-                                            <thead>
-                                            <tr>
-                                                <th>نام ویژگی</th>
-                                                <th>مقدار ویژگی</th>
-                                                <th>عملیات</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            </tbody>
-                                        </table>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-</div>
-<partial name="Partial/Pictures" model="new List<ProductPicturesDto>()"/>*@
 
 <div class="tab-pane fade" id="justify-contact" role="tabpanel" aria-labelledby="justify-contact-tab">
     <div class="row layout-top-spacing" id="cancel-row">
