--- a/ServiceComplex/Pages/Products/Edit.cshtml
+++ b/ServiceComplex/Pages/Products/Edit.cshtml
@@ -258,7 +258,7 @@
                         <input type="hidden" asp-for="Command.PrdIsUnit1Bigger"/>
                         <input type="hidden" asp-for="Command.PrdUid"/>
 
-                        <div class="form-row col-md-12 mb-4">
+                        @*<div class="form-row col-md-12 mb-4">
 
                             <div id="basic" class="col-lg-12 col-md-12 row layout-spacing layout-top-spacing">
                                 <div class="col-lg-12 col-md-12">
@@ -266,7 +266,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
 
